--- a/index.html
+++ b/index.html
@@ -1,177 +1,204 @@
-<!doctype html>
-<html>
-	
-<head>
-<meta charset="UTF-8">
-<title>The REASONS Lab at Tsinghua University</title>
-
-<!-- Here is the CSS Style for this webpage -->
-	
-<style>
-body
-{
- background-color:#FBFBFB;
- margin:0px auto;
- padding:0px;
- font-family:helvetica;
- height:2000px;
-}
-h1
-{
- text-align:center;
- font-size:60px;
- margin-top:10px;
- color:#040700;
-}
-h1 p
-{
- text-align:center;
- margin:0px;
- font-size:18px;
- text-decoration:underline;
- color:white;
-}
-#main_content
-{
- margin-top:50px;
- width:1100px;
- margin-left:100px;
-}
-#main_content li
-{
- display:inline;
- list-style-type:none;
- background-color:#7E856D;
- padding:15px;
- border-radius:5px 5px 0px 0px;
- color:#292A0A;
- font-weight:bold;
- cursor:pointer;
-}
-#main_content li.notselected
-{
- background-color:#7E856D;
- color:#292A0A;	
-}
-#main_content li.selected
-{
- background-color:#4D29E6;
- color:#F3E974;	
-}
-#main_content .hidden_desc
-{
- display:none;
- visibility:hidden;
-}
-#main_content #page_content
-{
- background-color:#F3F5F0;
- padding:10px;
- margin-top:9px;
- border-radius:0px 5px 5px 5px;
- color:#2E2E2E;
- line-height: 1.6em;
- word-spacing:4px;
-}	
-	</style>
-
-	
-<!-- Here is the code to control the multi-tabs -->
-	
-<script>
- function change_tab(id)
- {
-   document.getElementById("page_content").innerHTML=document.getElementById(id+"_desc").innerHTML;
-   document.getElementById("page1").className="notselected";
-   document.getElementById("page2").className="notselected";
-   document.getElementById("page3").className="notselected";
-   document.getElementById("page4").className="notselected";
-   document.getElementById("page5").className="notselected";
-   document.getElementById("page6").className="notselected";
-   document.getElementById(id).className="selected";
- }
-</script>
-	
+<!DOCTYPE html>
+<html lang="en">
+<head><meta charset="us-ascii">
+	<title>PRDC 2022</title>
+	<meta name="viewport" content="width=device-width"><meta name="keywords" content=""><meta name="description" content="">
+	<link href="css/style.css" rel="stylesheet" type="text/css" /><script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/script.js"></script><script type="text/javascript" src="js/jquery.smoothscroll.js"></script><script type="text/javascript" src="js/jquery.scrollshow.js"></script><script type="text/javascript" src="js/jquery.rollover.js"></script><script type="text/javascript" src="js/jquery.slidewide.js"></script><script>
+$(function($){
+	if ($('#spMenu').css('display') == 'block') {
+		$('html').smoothscroll({easing : 'swing', speed : 1000, margintop : 10, headerfix : $('header')});
+	} else {
+		$('html').smoothscroll({easing : 'swing', speed : 1000, margintop : 10, headerfix : $('nav')});
+	}
+	$('.totop').scrollshow({position : 500});
+	$('.slide').slidewide({
+		touch         : true,
+		touchDistance : '80',
+		autoSlide     : true,
+		repeat        : true,
+		interval      : 5000,
+		duration      : 500,
+		easing        : 'swing',
+		imgHoverStop  : true,
+		navHoverStop  : true,
+		prevPosition  : 0,
+		nextPosition  : 0,
+		viewSlide     : 1,
+		baseWidth     : 980,
+		navImg        : false,
+		navImgCustom  : false,
+		navImgSuffix  : ''
+	});
+	$('.slidePrev img').rollover();
+	$('.slideNext img').rollover();
+	});
+</script><!--[if lt IE 9]>
+	<script src="js/html5shiv.js"></script>
+	<script src="js/css3-mediaqueries.js"></script>
+<![endif]-->
 </head>
-
-	
 <body>
-	
-<div id="main_content">
+<header>
+<div class="inner">
+<h1><a href="index.html"><img align="middle" alt="prdc logo" src="images/2022_logo.png" width="200px" /></a></h1>
 
-<!-- The title "Long Wang" -->	
-<div>
-<table width="100%" border="0">
-  <tbody>
-    <tr>
-      <th scope="col"><h1>REASONS Lab</h1>
-      </th>
-    </tr>
-  </tbody>
-</table>
-	</div>
-	
-<h3> The <font color="blue"> <u>RE</u>liability <u>A</u>nd <u>S</u>ecurity <u>O</u>f <u>N</u>etworks and <u>S</u>ystems (REASONS)</font> lab is located at Institute for Network Sciences and Cyberspace, Tsinghua University, and is led by <a href="https://longwang1.github.io" target="_blank">Prof. Long Wang</a>. The research focuses of this lab are on resiliency, security and understanding of systems, services and networks, especially when they are complicated, intelligent, autonomous, dynamic and/or software-defined. 
-	
-	</h3>
-	
-<!-- Main contents in multiple tabs -->	
-<div>
-<p>
-	<br>
-	</p>
-	
-<!-- tabs -->
- <li class="selected" id="page1" onclick="change_tab(this.id);">Recent Updates</li>
- <li class="notselected" id="page2" onclick="change_tab(this.id);">Projects</li>
- <li class="notselected" id="page3" onclick="change_tab(this.id);">Members</li>
- <li class="notselected" id="page4" onclick="change_tab(this.id);">Publications</li>
- <li class="notselected" id="page5" onclick="change_tab(this.id);">Software</li>
- <li class="notselected" id="page6" onclick="change_tab(this.id);">Activities</li>
-
-<!-- tab contents -->
- <div class='hidden_desc' id="page1_desc">
- </div>
-
-	
- <div class='hidden_desc' id="page2_desc">
-	 
- </div>
- 
- <div class='hidden_desc' id="page3_desc">
- <h2>Lead</h2>
-<ul>Long Wang</ul>
-	 
-<h2>PhD Students</h2>
-<ul>Yinqin Zhao</ul>
-<ul>Chang Liu</ul>
-
-<h2>Master Students</h2>
-<ul>Yang Zhang</ul>
-	 
- </div>
- 
- <div class='hidden_desc' id="page4_desc">
-
- </div>
-	
- <div class='hidden_desc' id="page5_desc">
-
- </div>
-	
- <div class='hidden_desc' id="page6_desc">
-
- </div>
-	
- <div id="page_content">
-
-  </div>
- 
-  </div>
+<p class="summary">27th IEEE Pacific Rim International Symposium on Dependable Computing (PRDC 2022)<br />
+November 28-December 1, 2022, Beijing, China</p>
 </div>
-	
-	
-	
+<!-- /.inner --></header>
 
+<div id="spMenu"></div>
+
+<nav>
+<div class="inner">
+<ul class="gnav"><!--
+			<li><a href="index.html">Top</a></li>
+		-->
+	<li class="subnav"><a href="cfp.html">Calls</a>
+
+	<ul>
+		<li><a href="cfp.html?id=paper">Call for Papers</a></li>
+		<li><a href="cfp.html?id=fast">Call for Fast Abstracts</a></li>
+	</ul>
+	</li>
+	<li class="subnav"><a href="javascript:;">Program</a>
+	<!--<ul>
+	    <li><a href="javascript:;">Program</a></li>
+		<li><a href="javascript:;">Program at a glance</a></li>
+		<li><a href="javascript:;">Keynote Speeches</a></li>
+		<li><a href="javascript:;">Accepted Papers</a></li>
+	</ul>-->
+	</li>
+	<li class="subnav"><a href="organizing.html">Committees</a>
+	<ul>
+		<li><a href="organizing.html?id=organizing">Organizing Committee</a></li>
+		<li><a href="organizing.html?id=steering">Steering Committee</a></li>
+		<li><a href="organizing.html?id=tpc">Program Committee</a></li>
+	</ul>
+	</li>
+	<li class="subnav"><a href="attending.html">Attending</a>
+	<ul>
+		<li><a href="attending.html?id=general">General Information</a></li>
+		<li><a href="attending.html?id=registration">Registration</a></li>
+		<li><a href="attending.html?id=venue">Venue</a></li>
+		<li><a href="attending.html?id=transportation">Transportation</a></li>
+		<li><a href="attending.html?id=hotels">Hotels</a></li>
+	</ul>
+	</li>
+	<li class="subnav"><a href="index.html">More</a>
+	<ul>
+		<li><a href="http://prdc.dependability.org/">Past events</a></li>
+	</ul>
+	</li>
+</ul>
+</div>
+<!-- /.inner --></nav>
+
+<div class="slide">
+<ul class="slideInner">
+	<li><a href="index.html"><img alt="1" height="500px" width="700px" src="images/2022_p1.jpg" /></a></li>
+	<li><a href="index.html"><img alt="2" height="500px" width="700px" src="images/2022_p2.jpg" /></a></li>
+	<li><a href="index.html"><img alt="3" height="500px" width="700px" src="images/2022_p3.jpg" /></a></li>
+	<li><a href="index.html"><img alt="4" height="500px" width="700px" src="images/2022_p4.jpg" /></a></li>
+	<li><a href="index.html"><img alt="5" height="500px" width="700px" src="images/2022_p5.jpg" /></a></li>
+	<li><a href="index.html"><img alt="6" height="500px" width="700px" src="images/2022_p6.jpg" /></a></li>
+	<li><a href="index.html"><img alt="7" height="500px" width="700px" src="images/2022_p7.jpg" /></a></li>
+	<li><a href="index.html"><img alt="8" height="500px" width="700px" src="images/2022_p8.jpg" /></a></li>
+	<li><a href="index.html"><img alt="9" height="500px" width="700px" src="images/2022_p9.jpg" /></a></li>
+</ul>
+
+<div class="slidePrev"><img alt="previous" src="images/nav_prev.png" /></div>
+
+<div class="slideNext"><img alt="next" src="images/nav_next.png" /></div>
+
+<div class="controlNav"></div>
+</div>
+<!-- /.slide -->
+
+<div id="contents">
+<div id="main">
+<h2 id="news">News</h2>
+
+<dl class="info">
+    <dt><span>7/NOV/2021</span></dt>
+	<dd>Due to the strict border restriction at Western Australia (i.e., 2 weeks hotel quarantine upon arrival for limited travellers), we have decided to run the conference fully online. We apologize for any inconveniences caused. We hope to see you all virtually at PRDC 2021! Please see virtual attendance details at the <a href="attending.html">Attending</a> page.</dd>
+	<dt><span>21/OCT/2021</span></dt>
+	<dd>Our exciting keynote and plenary speakers and talk details are finalized! Please see <a href="program.html?id=keynote">Keynote</a> page.</dd>
+	<dt><span>14/OCT/2021</span></dt>
+	<dd>The final program is now available, please see <a href="program.html">Program</a> page.</dd>
+	<dt><span>2/SEP/2021</span></dt>
+	<dd>Fast Abstract submission is now open, please see <a href="cfp.html?id=fast">Call for Fast Abstracts</a> for further details.</dd>
+	<dt><span>31/AUG/2021</span></dt>
+	<dd>Paper notification has been sent. You can find the list of accepted papers from the <a href="program.html">Program</a> page.</dd>
+	<dt><span>18/JUL/2021</span></dt>
+	<dd>Due to several requests, we have decided to extend the paper submission deadline to 1 August 2021. Please have your papers ready and submitted in time!</dd>
+	<dt><span>25/MAR/2021</span></dt>
+	<dd>The site is open. Due to the Coronavirus pandemic, we are preparing the conference as an online conference. If the travel restrictions are lifted by August, we will look into organising a face-to-face conference in addition to the online venue as well. Please contact the General Chair if you have any qustions. We hope to see you in Perth, Australia in December!</dd>
+	<!--
+			<dt><span>20XX-01-01</span></dt>
+			<dd>
+				 bra bra
+			</dd>
+		-->
+</dl>
+
+<h2 id="news">About</h2>
+
+<p>IEEE PRDC 2022 is the twenty-seventh event in the series of symposia started in 1989 that are devoted to dependable and fault-tolerant computing. PRDC is recognized as the main event in the Pacific area that covers many dimensions of dependability and fault tolerance, encompassing fundamental theoretical approaches, practical experimental projects, and commercial components and systems. As applications of computing systems have permeated into all aspects of daily life, the dependability of computing system has become increasingly critical. This symposium provides a forum for countries around the Pacific Rim and other areas of the world to exchange ideas for improving the dependability of computing systems.</p>
+
+<dl class="info">
+</dl>
+</div>
+<!-- /#main -->
+
+<div id="sub">
+<h3>Important dates (Time 23:59 AoE)</h3>
+
+<ul class="submenu">
+	<li>Paper Submission: <strong><s>18 Jul 2021</s> <s>1 Aug 2021</s></strong></li>
+	<li>Acceptance Notification: <strong><s>22 Aug 2021</s> <s>29 Aug 2021</s></strong></li>
+	<li>FA Submission: <strong><s>14 Sep 2021</s></strong></li>
+	<li>FA Notification: <strong><s>28 Sep 2021</s></strong></li>
+	<!--
+		<ul class="submenu">
+			<li>Paper Submission: <del>18 Jul 2020</del> <strong>1 Aug 2020</strong> (FIRM) </li>
+			<li>Acceptance Notification: <del>22 Aug 2020</del> <strong>2 Sep 2020</strong> </li>
+			<li><del>Posters/FA Submission:   <strong> 5 Sep 2020</strong></del> </li>
+			<li><del>>Posters/FA Notification: <strong>15 Sep 2020</strong></del> </li>
+        --><!--
+			<li>Notification of Acceptance for Papers: <strong>September 15</strong> <del>September 1, 2019</del> <del>August 15, 2019</del></li>
+			<li>Fast Abstracts Submission Due: <strong>September 25, 2019</strong> <del>September 15, 2019</del></li>
+			<li>Notification of Acceptance for Fast Abstracts: <strong>October 2, 2019</strong> <del>September 25, 2019</del></li>
+			<li> Camera-Ready Paper Due : <strong>October 5, 2019</strong></li>
+		    -->
+</ul>
+
+<h3>Sponsors</h3>
+
+<ul class="submenu">
+	<li><a href="https://www.computer.org/"><img alt="IEEE logo" src="images/logoIEEE2.png" width="160px" /></a></li>
+</ul>
+
+<h3>Supporters</h3>
+
+<ul class="submenu">
+	<li><a href="https://www.uwa.edu.au/"><img alt="UWA logo" src="images/uwalogo.jpg" width="180px" /></a></li>
+	<li><a href="https://www.businesseventsperth.com/"><img alt="BEP logo" src="images/BEP_logo.png" width="150px" /></a></li>
+	<li><a href="http://www.tourism.australia.com"><img alt="Tourism Australia logo" src="images/tourism_australia.png" width="200px" /></a></li>
+	<li><a href="https://www.westernaustralia.com"><img alt="Tourism Australia logo" src="images/tourism_wa.png" width="150px" /></a></li>
+</ul>
+</div>
+<!-- /#sub --></div>
+<!-- /#contents -->
+
+<footer><!--
+	<div class="footmenu">
+		<ul>
+			<li><a href="index.html">Top</a></li>
+			<li><a href="http://photo.sanographix.net/" target="_blank">Photo by sanographix</a></li>
+		</ul>
+	</div>--><!-- /.footmenu -->
+<div class="copyright">Copyright &copy; PRDC 2022 <!--	<a href="http://photo.sanographix.net/" target="_blank">Photo by sanographix</a> --><!-- /.copyright --></div>
+</footer>
 </body>
 </html>
