fix many formattings

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><meta charset="us-ascii">
-	<title>PRDC 2022</title>
+	<title>REASONS Lab</title>
 	<meta name="viewport" content="width=device-width"><meta name="keywords" content=""><meta name="description" content="">
 	<link href="css/style.css" rel="stylesheet" type="text/css" /><script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/script.js"></script><script type="text/javascript" src="js/jquery.smoothscroll.js"></script><script type="text/javascript" src="js/jquery.scrollshow.js"></script><script type="text/javascript" src="js/jquery.rollover.js"></script><script type="text/javascript" src="js/jquery.slidewide.js"></script><script>
 $(function($){
@@ -40,56 +40,35 @@ $(function($){
 <body>
 <header>
 <div class="inner">
-<h1><a href="index.html"><img align="middle" alt="prdc logo" src="images/2022_logo.png" width="200px" /></a></h1>
+<h1><a href="index.html"><img align="middle" alt="REASONS logo" src="images/REASONS_logo.png" width="200px" /></a></h1>
 
-<p class="summary">27th IEEE Pacific Rim International Symposium on Dependable Computing (PRDC 2022)<br />
-November 28-December 1, 2022, Beijing, China</p>
+<p class="summary" style="font-size:25px" align="middle"><b><u>RE</u>liability <u>A</u>nd <u>S</u>ecurity <u>O</u>f <u>N</u>etworks and <u>S</u>ystems Lab <br> (REASONS)</b></p>
 </div>
 <!-- /.inner --></header>
 
 <div id="spMenu"></div>
+<div class="myinner"> 
+<p>IEEE PRDC 2022 is the twenty-seventh event in the series of symposia started in 1989 that are devoted to dependable and fault-tolerant computing. PRDC is recognized as the main event in the Pacific area that covers many dimensions of dependability and fault tolerance, encompassing fundamental theoretical approaches, practical experimental projects, and commercial components and systems. As applications of computing systems have permeated into all aspects of daily life, the dependability of computing system has become increasingly critical. This symposium provides a forum for countries around the Pacific Rim and other areas of the world to exchange ideas for improving the dependability of computing systems.
+</p>
+</div>
 
 <nav>
 <div class="inner">
 <ul class="gnav"><!--
 			<li><a href="index.html">Top</a></li>
 		-->
-	<li class="subnav"><a href="cfp.html">Calls</a>
-
-	<ul>
-		<li><a href="cfp.html?id=paper">Call for Papers</a></li>
-		<li><a href="cfp.html?id=fast">Call for Fast Abstracts</a></li>
-	</ul>
+	<li class="subnav"><a href="projects.html">Projects</a>
 	</li>
-	<li class="subnav"><a href="javascript:;">Program</a>
-	<!--<ul>
-	    <li><a href="javascript:;">Program</a></li>
-		<li><a href="javascript:;">Program at a glance</a></li>
-		<li><a href="javascript:;">Keynote Speeches</a></li>
-		<li><a href="javascript:;">Accepted Papers</a></li>
-	</ul>-->
+	<li class="subnav"><a href="members.html">Members</a>
 	</li>
-	<li class="subnav"><a href="organizing.html">Committees</a>
-	<ul>
-		<li><a href="organizing.html?id=organizing">Organizing Committee</a></li>
-		<li><a href="organizing.html?id=steering">Steering Committee</a></li>
-		<li><a href="organizing.html?id=tpc">Program Committee</a></li>
-	</ul>
+	<li class="subnav"><a href="publications.html">Publications</a>
 	</li>
-	<li class="subnav"><a href="attending.html">Attending</a>
-	<ul>
-		<li><a href="attending.html?id=general">General Information</a></li>
-		<li><a href="attending.html?id=registration">Registration</a></li>
-		<li><a href="attending.html?id=venue">Venue</a></li>
-		<li><a href="attending.html?id=transportation">Transportation</a></li>
-		<li><a href="attending.html?id=hotels">Hotels</a></li>
-	</ul>
+	<li class="subnav"><a href="Activities.html">Activities</a>
 	</li>
-	<li class="subnav"><a href="index.html">More</a>
-	<ul>
-		<li><a href="http://prdc.dependability.org/">Past events</a></li>
-	</ul>
+	<!--
+	<li class="subnav"><a href="software.html">Software</a>
 	</li>
+	-->
 </ul>
 </div>
 <!-- /.inner --></nav>
@@ -115,7 +94,7 @@ November 28-December 1, 2022, Beijing, China</p>
 </div>
 <!-- /.slide -->
 
-<div id="contents">
+<div id="contents"> 
 <div id="main">
 <h2 id="news">News</h2>
 
@@ -142,53 +121,12 @@ November 28-December 1, 2022, Beijing, China</p>
 		-->
 </dl>
 
-<h2 id="news">About</h2>
-
-<p>IEEE PRDC 2022 is the twenty-seventh event in the series of symposia started in 1989 that are devoted to dependable and fault-tolerant computing. PRDC is recognized as the main event in the Pacific area that covers many dimensions of dependability and fault tolerance, encompassing fundamental theoretical approaches, practical experimental projects, and commercial components and systems. As applications of computing systems have permeated into all aspects of daily life, the dependability of computing system has become increasingly critical. This symposium provides a forum for countries around the Pacific Rim and other areas of the world to exchange ideas for improving the dependability of computing systems.</p>
-
 <dl class="info">
 </dl>
 </div>
 <!-- /#main -->
 
-<div id="sub">
-<h3>Important dates (Time 23:59 AoE)</h3>
-
-<ul class="submenu">
-	<li>Paper Submission: <strong><s>18 Jul 2021</s> <s>1 Aug 2021</s></strong></li>
-	<li>Acceptance Notification: <strong><s>22 Aug 2021</s> <s>29 Aug 2021</s></strong></li>
-	<li>FA Submission: <strong><s>14 Sep 2021</s></strong></li>
-	<li>FA Notification: <strong><s>28 Sep 2021</s></strong></li>
-	<!--
-		<ul class="submenu">
-			<li>Paper Submission: <del>18 Jul 2020</del> <strong>1 Aug 2020</strong> (FIRM) </li>
-			<li>Acceptance Notification: <del>22 Aug 2020</del> <strong>2 Sep 2020</strong> </li>
-			<li><del>Posters/FA Submission:   <strong> 5 Sep 2020</strong></del> </li>
-			<li><del>>Posters/FA Notification: <strong>15 Sep 2020</strong></del> </li>
-        --><!--
-			<li>Notification of Acceptance for Papers: <strong>September 15</strong> <del>September 1, 2019</del> <del>August 15, 2019</del></li>
-			<li>Fast Abstracts Submission Due: <strong>September 25, 2019</strong> <del>September 15, 2019</del></li>
-			<li>Notification of Acceptance for Fast Abstracts: <strong>October 2, 2019</strong> <del>September 25, 2019</del></li>
-			<li> Camera-Ready Paper Due : <strong>October 5, 2019</strong></li>
-		    -->
-</ul>
-
-<h3>Sponsors</h3>
-
-<ul class="submenu">
-	<li><a href="https://www.computer.org/"><img alt="IEEE logo" src="images/logoIEEE2.png" width="160px" /></a></li>
-</ul>
-
-<h3>Supporters</h3>
-
-<ul class="submenu">
-	<li><a href="https://www.uwa.edu.au/"><img alt="UWA logo" src="images/uwalogo.jpg" width="180px" /></a></li>
-	<li><a href="https://www.businesseventsperth.com/"><img alt="BEP logo" src="images/BEP_logo.png" width="150px" /></a></li>
-	<li><a href="http://www.tourism.australia.com"><img alt="Tourism Australia logo" src="images/tourism_australia.png" width="200px" /></a></li>
-	<li><a href="https://www.westernaustralia.com"><img alt="Tourism Australia logo" src="images/tourism_wa.png" width="150px" /></a></li>
-</ul>
 </div>
-<!-- /#sub --></div>
 <!-- /#contents -->
 
 <footer><!--
@@ -198,7 +136,7 @@ November 28-December 1, 2022, Beijing, China</p>
 			<li><a href="http://photo.sanographix.net/" target="_blank">Photo by sanographix</a></li>
 		</ul>
 	</div>--><!-- /.footmenu -->
-<div class="copyright">Copyright &copy; PRDC 2022 <!--	<a href="http://photo.sanographix.net/" target="_blank">Photo by sanographix</a> --><!-- /.copyright --></div>
+<div class="copyright">Copyright &copy; REASONS Lab <!--	<a href="http://photo.sanographix.net/" target="_blank">Photo by sanographix</a> --><!-- /.copyright --></div>
 </footer>
 </body>
 </html>
