comment the pictures/slides

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ $(function($){
 </div>
 <!-- /.inner --></nav>
 
+<!-- 
 <div class="slide">
 <ul class="slideInner">
 	<li><a href="index.html"><img alt="1" height="500px" width="700px" src="images/2022_p1.jpg" /></a></li>
@@ -91,8 +92,9 @@ $(function($){
 <div class="slideNext"><img alt="next" src="images/nav_next.png" /></div>
 
 <div class="controlNav"></div>
-</div>
+</div> -->
 <!-- /.slide -->
+
 
 <div id="contents"> 
 <div id="main">
