basics of formattings complete

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ $(function($){
 <body>
 <header>
 <div class="inner">
-<h1><a href="index.html"><img align="middle" alt="REASONS logo" src="images/REASONS_logo.png" width="200px" /></a></h1>
+<h1><a href="index.html"><img align="middle" alt="REASONS logo" src="images/REASONS_Logo.png" width="200px" /></a></h1>
 
 <p class="summary" style="font-size:25px" align="middle"><b><u>RE</u>liability <u>A</u>nd <u>S</u>ecurity <u>O</u>f <u>N</u>etworks and <u>S</u>ystems Lab <br> (REASONS)</b></p>
 </div>
