some contents of index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="us-ascii">
+<html>
+<head>
 	<title>REASONS Lab</title>
 	<meta name="viewport" content="width=device-width"><meta name="keywords" content=""><meta name="description" content="">
 	<link href="css/style.css" rel="stylesheet" type="text/css" /><script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/script.js"></script><script type="text/javascript" src="js/jquery.smoothscroll.js"></script><script type="text/javascript" src="js/jquery.scrollshow.js"></script><script type="text/javascript" src="js/jquery.rollover.js"></script><script type="text/javascript" src="js/jquery.slidewide.js"></script><script>
@@ -48,7 +48,7 @@ $(function($){
 
 <div id="spMenu"></div>
 <div class="myinner"> 
-<p>IEEE PRDC 2022 is the twenty-seventh event in the series of symposia started in 1989 that are devoted to dependable and fault-tolerant computing. PRDC is recognized as the main event in the Pacific area that covers many dimensions of dependability and fault tolerance, encompassing fundamental theoretical approaches, practical experimental projects, and commercial components and systems. As applications of computing systems have permeated into all aspects of daily life, the dependability of computing system has become increasingly critical. This symposium provides a forum for countries around the Pacific Rim and other areas of the world to exchange ideas for improving the dependability of computing systems.
+<p>The REliability And Security Of Networks and Systems (REASONS) lab led by Prof. Long Wang is located at Institute for Network Sciences and Cyberspace, Tsinghua University, China. The research focuses of this lab include reliability, security and understanding of systems, services and networks, especially when they are complicated, intelligent, autonomous, dynamic and/or software-defined. Typical research interests are on reliability and security of cloud platforms, big data/AI platforms, and so on. 
 </p>
 </div>
 
@@ -100,26 +100,14 @@ $(function($){
 <h2 id="news">News</h2>
 
 <dl class="info">
-    <dt><span>7/NOV/2021</span></dt>
-	<dd>Due to the strict border restriction at Western Australia (i.e., 2 weeks hotel quarantine upon arrival for limited travellers), we have decided to run the conference fully online. We apologize for any inconveniences caused. We hope to see you all virtually at PRDC 2021! Please see virtual attendance details at the <a href="attending.html">Attending</a> page.</dd>
-	<dt><span>21/OCT/2021</span></dt>
-	<dd>Our exciting keynote and plenary speakers and talk details are finalized! Please see <a href="program.html?id=keynote">Keynote</a> page.</dd>
-	<dt><span>14/OCT/2021</span></dt>
-	<dd>The final program is now available, please see <a href="program.html">Program</a> page.</dd>
-	<dt><span>2/SEP/2021</span></dt>
-	<dd>Fast Abstract submission is now open, please see <a href="cfp.html?id=fast">Call for Fast Abstracts</a> for further details.</dd>
-	<dt><span>31/AUG/2021</span></dt>
-	<dd>Paper notification has been sent. You can find the list of accepted papers from the <a href="program.html">Program</a> page.</dd>
-	<dt><span>18/JUL/2021</span></dt>
-	<dd>Due to several requests, we have decided to extend the paper submission deadline to 1 August 2021. Please have your papers ready and submitted in time!</dd>
-	<dt><span>25/MAR/2021</span></dt>
-	<dd>The site is open. Due to the Coronavirus pandemic, we are preparing the conference as an online conference. If the travel restrictions are lifted by August, we will look into organising a face-to-face conference in addition to the online venue as well. Please contact the General Chair if you have any qustions. We hope to see you in Perth, Australia in December!</dd>
-	<!--
-			<dt><span>20XX-01-01</span></dt>
+    <dt><span>Jan. 2022: Our team has one paper accepted by IEEE Transactions on Service Computing (TSC). </span></dt>
+    <dt><span>Dec. 2021: Prof. Wang received National Talent Award（入选国家级人才计划）. </span></dt>
+    <dt><span>Nov. 2021: We will host IEEE PRDC 2022 conference at Tsinghua University. Prof. Wang will serve as PRDC2022's general chair. </span></dt>
+    <dt><span>Sep. 2021: Our funding proposal "Pseudo-code Representation of Cloud Service Dependencies and Analysis based on it" to Huawei Corporation was granted. </span></dt>
+	<!-- <dt><span>20XX-01-01</span></dt>
 			<dd>
 				 bra bra
-			</dd>
-		-->
+			</dd>   -->
 </dl>
 
 <dl class="info">
