add News in index.html

--- a/index.html
+++ b/index.html
@@ -100,10 +100,27 @@ $(function($){
 <h2 id="news">News</h2>
 
 <dl class="info">
-    <dt><span> Jan. 2022: Our team has one paper accepted by IEEE Transactions on Service Computing (TSC). </span></dt>
+    <dt><span> Jan. 2022: Our paper "Transparently Capturing Request Execution Path for Understanding Service Behavior and Detecting Anomalies" was accepted by IEEE Transactions on Service Computing (TSC). </span></dt>
     <dt><span> Dec. 2021: Prof. Wang received National Talent Award（入选国家级人才计划）. </span></dt>
-    <dt><span> Nov. 2021: We will host IEEE PRDC 2022 conference at Tsinghua University. Prof. Wang will serve as PRDC2022's general chair. </span></dt>
-    <dt><span> Sep. 2021: Our funding proposal "Pseudo-code Representation of Cloud Service Dependencies and Analysis based on it" to Huawei Corporation was granted. </span></dt>
+	<dt><span> Dec. 2021: Xingjian won scholarship in The Tsinghua University Capture-The-Flag (THUCTF) Competition (top 22%). Well done, Xingjian!</span></dt>
+    <dt><span> Nov. 2021: We will host IEEE Pacific Rim International Symposium on Dependable Computing (PRDC) 2022 conference at Tsinghua University. Prof. Wang serves as General Chair of IEEE PRDC 2022. </span></dt>
+	<dt><span> Nov. 2021: Xingjian joined our lab. Welcome, Xingjian!</span></dt>
+	<dt><span> Nov. 2021: The NSFC funding proposal "Core Mechanisms of New Generation Internet Architecture that Supports Multi-Objective Forms" that we participate was granted. </span></dt>
+	<dt><span> Nov. 2021: Prof. Wang was invited to give a talk "Dependable Computing in Enterprise-Class Clouds" to Central Research Institute of Huawei and Huawei Cloud Department. </span></dt>
+	<dt><span> Oct. 2021: Prof. Wang was appointed as expert of Ministry of Industry and Information Technology, China （入选工信部专家库）. </span></dt>
+	<dt><span> Sep. 2021: Our funding proposal "Pseudo-code Representation of Cloud Service Dependencies and Analysis Based on the Representation" to Huawei Corporation was granted. </span></dt>
+	<dt><span> Aug. 2021: Prof. Wang was invited to give a talk "Providing Dependability to Critical Computing Systems – & Advice to Fresh Graduate Students" to 2021 fresh graduate students of Institute of Network Sciences and Cyberspace (INSC), Tsinghua University. </span></dt>
+	<dt><span> Jun. 2021: Chang got a summer internship in Tencent Corporation. Congratulations, Chang!</span></dt>
+    <dt><span> Jun. 2021: Yang completed Bachelor Thesis "A Novel Text Generation Model Based on Graph Network and Sequential Model", and started her Master program in this lab. </span></dt>
+    <dt><span> Jun. 2021: Yinqin completed Bachelor Thesis "Dynamic Behavior Monitoring System of Software Defined Network", and started his PhD program in this lab. </span></dt>
+ 	<dt><span> May 2021: Prof. Wang was invited to give a talk "Recovering Datastore and Providing Data Consistency for Big Data Software-as-a-Service Systems" at the 2021 THU-USC Faculty Research Symposium. </span></dt>
+    <dt><span> May 2021: Chang joined our lab and started his PhD program here. Welcome, Chang!</span></dt>
+	<dt><span> Apr. 2021: Our paper "Iteratively Checking Program Properties Involving Non-Boolean Values" was accepted by The International Conference on Dependable Systems and Networks (DSN), Fast Abstract, 2021. </span></dt>
+	<dt><span> Apr. 2021: Yang joined our lab. Welcome, Yang!</span></dt>
+	<dt><span> Apr. 2021: Prof. Wang served as Program Committee of IEEE Pacific Rim International Symposium on Dependable Computing (PRDC) 2021. </span></dt>
+	<dt><span> Apr. 2021: Prof. Wang was invited to give a talk "Designing Resiliency for Enterprise-Class Clouds" at Institute of Network Sciences and Cyberspace (INSC), Tsinghua University. </span></dt>
+	<dt><span> Mar. 2021: Yinqin joined our lab. Welcome, Yinqin!</span></dt>
+	<dt><span> Feb. 2021: Prof. Wang served as Fast Abstract co-Chair and Research Track Program Committee of IEEE International Symposium on Software Reliability Engineering (ISSRE) 2021. </span></dt>
 	<!-- <dt><span>20XX-01-01</span></dt>
 			<dd>
 				 bra bra
