populate the webpages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><meta charset="UTF-8">
 	<title>REASONS Lab</title>
 	<meta name="viewport" content="width=device-width"><meta name="keywords" content=""><meta name="description" content="">
 	<link href="css/style.css" rel="stylesheet" type="text/css" /><script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/script.js"></script><script type="text/javascript" src="js/jquery.smoothscroll.js"></script><script type="text/javascript" src="js/jquery.scrollshow.js"></script><script type="text/javascript" src="js/jquery.rollover.js"></script><script type="text/javascript" src="js/jquery.slidewide.js"></script><script>
@@ -48,7 +48,7 @@ $(function($){
 
 <div id="spMenu"></div>
 <div class="myinner"> 
-<p>The REliability And Security Of Networks and Systems (REASONS) lab led by Prof. Long Wang is located at Institute for Network Sciences and Cyberspace, Tsinghua University, China. The research focuses of this lab include reliability, security and understanding of systems, services and networks, especially when they are complicated, intelligent, autonomous, dynamic and/or software-defined. Typical research interests are on reliability and security of cloud platforms, big data/AI platforms, and so on. 
+<p>The REliability And Security Of Networks and Systems (REASONS) lab led by <a href="https://longwang1.github.io/">Prof. Long Wang</a> is located at Institute for Network Sciences and Cyberspace, Tsinghua University, China. The research focuses of this lab include reliability, security and understanding of systems, services and networks, especially when they are complicated, intelligent, autonomous, dynamic and/or software-defined. Typical research interests are on reliability and security of cloud platforms, big data/AI platforms, and so on. 
 </p>
 </div>
 
@@ -60,10 +60,25 @@ $(function($){
 	<li class="subnav"><a href="projects.html">Projects</a>
 	</li>
 	<li class="subnav"><a href="members.html">Members</a>
-	</li>
+		<ul>
+			<li><a href="members.html?id=staff">Staff</a></li>
+			<li><a href="members.html?id=students">Students</a></li>
+		</ul>
+		</li>
 	<li class="subnav"><a href="publications.html">Publications</a>
+		<ul>
+			<li><a href="publications.html?id=journals">Journals and Books</a></li>
+			<li><a href="publications.html?id=confs">Conferences</a></li>
+			<li><a href="publications.html?id=patents">Patents</a></li>
+		</ul>
 	</li>
-	<li class="subnav"><a href="Activities.html">Activities</a>
+	<li class="subnav"><a href="activities.html">Activities</a>
+		<ul>
+			<li><a href="activities.html?id=academic">Academic Services</a></li>
+			<li><a href="activities.html?id=talks">Invited Talks</a></li>
+			<li><a href="activities.html?id=awards">Awards and Fundings</a></li>
+			<li><a href="activities.html?id=jobs">Jobs</a></li>
+		</ul>
 	</li>
 	<!--
 	<li class="subnav"><a href="software.html">Software</a>
@@ -100,6 +115,7 @@ $(function($){
 <h2 id="news">News</h2>
 
 <dl class="info">
+    <dt><span> Jan. 2022: Jinnan joins our lab. Welcome, Jinnan! </span></dt>
     <dt><span> Jan. 2022: Our paper "Transparently Capturing Request Execution Path for Understanding Service Behavior and Detecting Anomalies" was accepted by IEEE Transactions on Service Computing (TSC). </span></dt>
     <dt><span> Dec. 2021: Prof. Wang received National Talent Award（入选国家级人才计划）. </span></dt>
 	<dt><span> Dec. 2021: Xingjian won scholarship in The Tsinghua University Capture-The-Flag (THUCTF) Competition (top 22%). Well done, Xingjian!</span></dt>
