--- a/activities.html
+++ b/activities.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="utf-8">
-	<title>REASONS Lab Projects</title>
+<html>
+<head><meta charset="UTF-8">
+	<title>REASONS Lab Activities</title>
 	<meta name="viewport" content="width=device-width"><meta name="keywords" content=""><meta name="description" content="">
 	<link href="css/style.css" rel="stylesheet" type="text/css" /><script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/script.js"></script><script type="text/javascript" src="js/jquery.smoothscroll.js"></script><script type="text/javascript" src="js/jquery.scrollshow.js"></script><script type="text/javascript" src="js/jquery.rollover.js"></script><script>
 $(function($){
@@ -20,7 +20,7 @@ $(function($){
 <body data-new-gr-c-s-loaded="14.1020.0">
 <header>
 <div class="inner">
-<h1><a href="index.html"><img align="middle" alt="prdc logo" src="images/REASONS_Logo.png" width="200px" /></a></h1>
+<h1><a href="index.html"><img align="middle" alt="REASONS logo" src="images/REASONS_Logo.png" width="200px" /></a></h1>
 
 <p class="summary" style="font-size:25px" align="middle"><b><u>RE</u>liability <u>A</u>nd <u>S</u>ecurity <u>O</u>f <u>N</u>etworks and <u>S</u>ystems Lab <br> (REASONS)</b></p>
 </div>
@@ -33,15 +33,30 @@ $(function($){
 		<ul class="gnav"><!--
 					<li><a href="index.html">Top</a></li>
 				-->
-			<li class="subnav"><a href="projects.html">Projects</a>
-			</li>
-			<li class="subnav"><a href="members.html">Members</a>
-			</li>
-			<li class="subnav"><a href="publications.html">Publications</a>
-			</li>
-			<li class="subnav"><a href="Activities.html">Activities</a>
-			</li>
-			<!--
+				<li class="subnav"><a href="projects.html">Projects</a>
+				</li>
+				<li class="subnav"><a href="members.html">Members</a>
+					<ul>
+						<li><a href="members.html?id=staff">Staff</a></li>
+						<li><a href="members.html?id=students">Students</a></li>
+					</ul>
+					</li>
+				<li class="subnav"><a href="publications.html">Publications</a>
+					<ul>
+						<li><a href="publications.html?id=journals">Journals and Books</a></li>
+						<li><a href="publications.html?id=confs">Conferences</a></li>
+						<li><a href="publications.html?id=patents">Patents</a></li>
+					</ul>
+				</li>
+				<li class="subnav"><a href="activities.html">Activities</a>
+					<ul>
+						<li><a href="activities.html?id=academic">Academic Services</a></li>
+						<li><a href="activities.html?id=talks">Invited Talks</a></li>
+						<li><a href="activities.html?id=awards">Awards and Fundings</a></li>
+						<li><a href="activities.html?id=jobs">Jobs</a></li>
+					</ul>
+				</li>
+						<!--
 			<li class="subnav"><a href="software.html">Software</a>
 			</li>
 			-->
@@ -50,6 +65,35 @@ $(function($){
 		<!-- /.inner --></nav>
 		
 <div id="contents">
+	<h2 id="academic">Academic Services</h2>
+	<dl class="info">
+		<dt><span> Nov. 2021: We will host IEEE Pacific Rim International Symposium on Dependable Computing (PRDC) 2022 conference at Tsinghua University. Prof. Wang serves as General Chair of IEEE PRDC 2022. </span></dt>
+		<dt><span> Apr. 2021: Prof. Wang served as Program Committee of IEEE Pacific Rim International Symposium on Dependable Computing (PRDC) 2021. </span></dt>
+		<dt><span> Feb. 2021: Prof. Wang served as Fast Abstract co-Chair and Research Track Program Committee of IEEE International Symposium on Software Reliability Engineering (ISSRE) 2021. </span></dt>
+	</dl>
+	
+	<h2 id="talks">Invited Talks</h2>
+	<dl class="info">
+		<dt><span> Nov. 2021: Prof. Wang was invited to give a talk "Dependable Computing in Enterprise-Class Clouds" to Central Research Institute of Huawei and Huawei Cloud Department. </span></dt>
+		<dt><span> Aug. 2021: Prof. Wang was invited to give a talk "Providing Dependability to Critical Computing Systems – & Advice to Fresh Graduate Students" to 2021 fresh graduate students of Institute of Network Sciences and Cyberspace (INSC), Tsinghua University. </span></dt>
+		<dt><span> May 2021: Prof. Wang was invited to give a talk "Recovering Datastore and Providing Data Consistency for Big Data Software-as-a-Service Systems" at the 2021 THU-USC Faculty Research Symposium. </span></dt>
+		<dt><span> Apr. 2021: Prof. Wang was invited to give a talk "Designing Resiliency for Enterprise-Class Clouds" at Institute of Network Sciences and Cyberspace (INSC), Tsinghua University. </span></dt>
+	</dl>
+
+	<h2 id="awards">Awards and Fundings</h2>
+	<dl class="info">
+		<dt><span> Dec. 2021: Prof. Wang received National Talent Award（入选国家级人才计划）. </span></dt>
+		<dt><span> Dec. 2021: Xingjian won scholarship in The Tsinghua University Capture-The-Flag (THUCTF) Competition (top 22%). </span></dt>
+		<dt><span> Nov. 2021: The NSFC funding proposal "Core Mechanisms of New Generation Internet Architecture that Supports Multi-Objective Forms" that we participate was granted. </span></dt>
+		<dt><span> Oct. 2021: Prof. Wang was appointed as expert of Ministry of Industry and Information Technology, China （入选工信部专家库）. </span></dt>
+		<dt><span> Sep. 2021: Our funding proposal "Pseudo-code Representation of Cloud Service Dependencies and Analysis Based on the Representation" to Huawei Corporation was granted. </span></dt>
+	</dl>
+
+	<h2 id="jobs">Jobs</h2>
+	<dl class="info">
+		<dt><span> Jun. 2021: Chang got a summer internship in Tencent Corporation. </span></dt>
+	</dl>
+
 
 </div>
 <!-- /#contents -->
