--- a/members.html
+++ b/members.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="utf-8">
-	<title>REASONS Lab Projects</title>
+<html>
+<head><meta charset="UTF-8">
+	<title>REASONS Lab Members</title>
 	<meta name="viewport" content="width=device-width"><meta name="keywords" content=""><meta name="description" content="">
 	<link href="css/style.css" rel="stylesheet" type="text/css" /><script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/script.js"></script><script type="text/javascript" src="js/jquery.smoothscroll.js"></script><script type="text/javascript" src="js/jquery.scrollshow.js"></script><script type="text/javascript" src="js/jquery.rollover.js"></script><script>
 $(function($){
@@ -20,7 +20,7 @@ $(function($){
 <body data-new-gr-c-s-loaded="14.1020.0">
 <header>
 <div class="inner">
-<h1><a href="index.html"><img align="middle" alt="prdc logo" src="images/REASONS_Logo.png" width="200px" /></a></h1>
+<h1><a href="index.html"><img align="middle" alt="REASONS logo" src="images/REASONS_Logo.png" width="200px" /></a></h1>
 
 <p class="summary" style="font-size:25px" align="middle"><b><u>RE</u>liability <u>A</u>nd <u>S</u>ecurity <u>O</u>f <u>N</u>etworks and <u>S</u>ystems Lab <br> (REASONS)</b></p>
 </div>
@@ -33,15 +33,30 @@ $(function($){
 		<ul class="gnav"><!--
 					<li><a href="index.html">Top</a></li>
 				-->
-			<li class="subnav"><a href="projects.html">Projects</a>
-			</li>
-			<li class="subnav"><a href="members.html">Members</a>
-			</li>
-			<li class="subnav"><a href="publications.html">Publications</a>
-			</li>
-			<li class="subnav"><a href="Activities.html">Activities</a>
-			</li>
-			<!--
+				<li class="subnav"><a href="projects.html">Projects</a>
+				</li>
+				<li class="subnav"><a href="members.html">Members</a>
+					<ul>
+						<li><a href="members.html?id=staff">Staff</a></li>
+						<li><a href="members.html?id=students">Students</a></li>
+					</ul>
+					</li>
+				<li class="subnav"><a href="publications.html">Publications</a>
+					<ul>
+						<li><a href="publications.html?id=journals">Journals and Books</a></li>
+						<li><a href="publications.html?id=confs">Conferences</a></li>
+						<li><a href="publications.html?id=patents">Patents</a></li>
+					</ul>
+				</li>
+				<li class="subnav"><a href="activities.html">Activities</a>
+					<ul>
+						<li><a href="activities.html?id=academic">Academic Services</a></li>
+						<li><a href="activities.html?id=talks">Invited Talks</a></li>
+						<li><a href="activities.html?id=awards">Awards and Fundings</a></li>
+						<li><a href="activities.html?id=jobs">Jobs</a></li>
+					</ul>
+				</li>
+						<!--
 			<li class="subnav"><a href="software.html">Software</a>
 			</li>
 			-->
@@ -50,6 +65,20 @@ $(function($){
 		<!-- /.inner --></nav>
 		
 <div id="contents">
+
+	<h2 id="staff">Staff</h2>
+	<ul>
+		<li><a href="https://longwang1.github.io/">Long Wang</a></li>
+		<li>Jinnan Guo</li>
+	</ul>
+	
+	<h2 id="students">Students</h2>
+	<ul>
+		<li>Yinqin Zhao</li>
+		<li>Chang Liu</li>
+		<li>Yang Zhang</li>
+		<li>Xingjian Zhang</li>
+	</ul>
 
 </div>
 <!-- /#contents -->
