complete the lab homepage

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $(function($){
 
 <div id="spMenu"></div>
 <div class="myinner"> 
-<p>The REliability And Security Of Networks and Systems (REASONS) lab led by <a href="https://longwang1.github.io/">Prof. Long Wang</a> is located at Institute for Network Sciences and Cyberspace, Tsinghua University, China. The research focuses of this lab include reliability, security and understanding of systems, services and networks, especially when they are complicated, intelligent, autonomous, dynamic and/or software-defined. Typical research interests are on reliability and security of cloud platforms, big data/AI platforms, and so on. 
+<p>The REliability And Security Of Networks and Systems (REASONS) lab led by <a href="https://longwang1.github.io/" target="_blank">Prof. Long Wang</a> is located at Institute for Network Sciences and Cyberspace, Tsinghua University, China. The research focuses of this lab include reliability, security and understanding of systems, services and networks, especially when they are complicated, intelligent, autonomous, dynamic and/or software-defined. Typical research interests are on reliability and security of cloud platforms, big data/AI platforms, and so on. 
 </p>
 </div>
 
