--- a/members.html
+++ b/members.html
@@ -68,7 +68,7 @@ $(function($){
 
 	<h2 id="staff">Staff</h2>
 	<ul>
-		<li><a href="https://longwang1.github.io/">Long Wang</a></li>
+		<li><a href="https://longwang1.github.io/" target="_blank">Long Wang</a></li>
 		<li>Jinnan Guo</li>
 	</ul>
 	
